# Auto_ML_Testing

./: .gitignore  Experiment.py  Experiment_Manager.py  README.md  TPOT_Comparison.py  XGBoost.py  XGBoost_all_datasets.py  logistic_regression.py  main.py  pyproject.toml  requirements.txt  tpot_digits_pipeline.py
custom_implementations/custom_models/: custom_GD.py  custom_kNN.py  generic_template.py
custom_implementations/custom_preProcessing/: custom_preProcessing.py
input/data/abalone/: abalone_test.csv  abalone_test_x.csv  abalone_test_y.csv  abalone_train_x.csv  abalone_train_y.csv
input/data/automobile/: automobile_test.csv  automobile_train.csv
input/data/wine_quality/: wine_quality_test.csv  wine_quality_train.csv
mlruns/0/: meta.yaml
mlruns/0/0ca4e4265cc5459fb00712eec823c27e/: meta.yaml
mlruns/0/2e7a62d8b25e4487994daa2939aa5c08/: meta.yaml
mlruns/0/4a7c019ecba84cdbbb4279ce6f1f9507/: meta.yaml
mlruns/0/7ff519f70ac6431aba8a277cacefccec/: meta.yaml
mlruns/0/8b53b044a8f14625a036c430778c1754/: meta.yaml
mlruns/0/944bed26709e46958602b76e7e4dcf7d/: meta.yaml
mlruns/0/9a0de56ecd8144fba6b7ee75c519fc45/: meta.yaml
mlruns/0/b0ae7adb8f2d43708f99f0fda0cdccfe/: meta.yaml
mlruns/0/c1690e9cf56a4261ae5a121b249ea110/: meta.yaml
mlruns/0/c9541788340a4ed387df000f48ce0e55/: meta.yaml
mlruns/0/cde54887319e49f9878d8d340b50014f/: meta.yaml
mlruns/0/d12805c62b6744fa9320d8cc68ca8df1/: meta.yaml
templates/: custom_model.py  template_config.json
tests/: test_Experiment.py  test_template_config.json
utils/: Experiment.py  Experiment_Manager.py
(+50 files in other folders)
