[tool.poetry]
name = "auto-ml-testing"
version = "0.1.0"
description = ""
authors = ["dominik-pichler <info@dominik-pichler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
mlflow = "^2.12.1"
psutil = "^5.9.8"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
